force-app/main/default/objects/FACS_MAIN__c/FACS_MAIN__c.object-meta.xml
<CustomObject>
    <description>Home page fro FACS</description>
    <label>FACS_MAIN</label>
    <nameField>
        <displayFormat>FACS-{0000}</displayFormat>
        <label>FACS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAIN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>