force-app/main/default/objects/FACS_MAIN__c/fields/FACS_Affiliate_File__c.field-meta.xml
<CustomField>
    <fullName>FACS_Affiliate_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to FACS_Affiliate_File</description>
    <label>Affiliate File</label>
    <referenceTo>FACS_Affiliate_File__c</referenceTo>
    <relationshipLabel>FACS_MAINS</relationshipLabel>
    <relationshipName>FACS_MAINS</relationshipName>
    <type>Lookup</type>
</CustomField>