force-app/main/default/objects/FACS_MAIN__c/fields/FACS_DistLists__c.field-meta.xml
<CustomField>
    <fullName>FACS_DistLists__c</fullName>
    <description>TMZ FBS distr list names</description>
    <inlineHelpText>Select DS list name(s) for TMZ and /or FBC Announcement</inlineHelpText>
    <label>DistLists</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nd_chief_engeneer_all</fullName>
            </value>
            <value>
                <fullName>nd_master_control_all</fullName>
            </value>
            <value>
                <fullName>NE owners all</fullName>
            </value>
            <value>
                <fullName>Affiliated log as of 082522</fullName>
            </value>
            <value>
                <fullName>TMZ hip hop</fullName>
            </value>
            <value>
                <fullName>TMZ GM list</fullName>
            </value>
            <value>
                <fullName>TMZ CSD Affiliate List</fullName>
            </value>
            <value>
                <fullName>TMZ Email list1</fullName>
                <isActive>false</isActive>
                <label>TMZ Email list1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>