force-app/main/default/objects/FACS_MAIN__c/fields/FACS_Email_DLs__c.field-meta.xml
<CustomField>
    <fullName>FACS_Email_DLs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Email distribution lists</description>
    <label>Email DLs</label>
    <referenceTo>FACS_DL_Lists__c</referenceTo>
    <relationshipLabel>MAIN</relationshipLabel>
    <relationshipName>MAIN</relationshipName>
    <type>Lookup</type>
</CustomField>