force-app/main/default/objects/FACS_MAIN__c/fields/FACS_Email_type__c.field-meta.xml
<CustomField>
    <fullName>FACS_Email_type__c</fullName>
    <defaultValue>&quot;Manual Log&quot;</defaultValue>
    <description>FBC Log or TMZ Log types</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>