force-app/main/default/objects/FACS_MAIN__c/fields/FACS_EmailBody__c.field-meta.xml
<CustomField>
    <fullName>FACS_EmailBody__c</fullName>
    <defaultValue>&quot;Do not reply on this email &quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>EmailBody</label>
    <type>TextArea</type>
</CustomField>