force-app/main/default/objects/FACS_MAIN__c/fields/FACS_FailedEmails__c.field-meta.xml
<CustomField>
    <fullName>FACS_FailedEmails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failed Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>