force-app/main/default/objects/FACS_MAIN__c/fields/FACS_File_Name__c.field-meta.xml
<CustomField>
    <fullName>FACS_File_Name__c</fullName>
    <description>Source file name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Org File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>