force-app/main/default/objects/FACS_MAIN__c/fields/FACS_ORG_Emails__c.field-meta.xml
<CustomField>
    <fullName>FACS_ORG_Emails__c</fullName>
    <description>Email ; separated string for user</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Put ; separated emails here in addition to distribution list selection</inlineHelpText>
    <label>Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>