force-app/main/default/objects/FACS_MAIN__c/fields/FACS_Schedule_Long__c.field-meta.xml
<CustomField>
    <fullName>FACS_Schedule_Long__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>