force-app/main/default/objects/FACS_MAIN__c/fields/FACS_SendGrid_confirmation__c.field-meta.xml
<CustomField>
    <fullName>FACS_SendGrid_confirmation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SendGrid confirmation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>