force-app/main/default/objects/FACS_MAIN__c/fields/FACS_STATUS__c.field-meta.xml
<CustomField>
    <fullName>FACS_STATUS__c</fullName>
    <description>Path status</description>
    <label>STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
                <default>true</default>
                <label>Create</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>