force-app/main/default/objects/FACS_MAIN__c/fields/FACS_SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>FACS_SUBJECT__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>Email subject</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBJECT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>