force-app/main/default/objects/FACS_MAIN__c/fields/Manual_File_type__c.field-meta.xml
<CustomField>
    <fullName>Manual_File_type__c</fullName>
    <label>Type.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Announcement</fullName>
                <default>true</default>
                <label>Announcement</label>
            </value>
            <value>
                <fullName>Manual Log</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>