force-app/main/default/objects/FACS_MAIN__c/validationRules/FACS_Status_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>FACS_Status_Confirmed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(FACS_STATUS__c), &quot;Confirmed&quot;))</errorConditionFormula>
    <errorMessage>Confirmed record status cannot be changed.</errorMessage>
</ValidationRule>