force-app/main/default/objects/FACS_MAIN__c/validationRules/FACS_Status_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>FACS_Status_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(FACS_STATUS__c), &quot;Error&quot;))</errorConditionFormula>
    <errorMessage>Error record status cannot be changed.For any changes plese clone record.</errorMessage>
</ValidationRule>