force-app/main/default/objects/FACS_MAIN__c/validationRules/FACS_Subject.validationRule-meta.xml
<ValidationRule>
    <fullName>FACS_Subject</fullName>
    <active>true</active>
    <description>Subject cannot be &quot;Fox Broadcasting Company&quot;</description>
    <errorConditionFormula>AND(SUBSTITUTE( UPPER(TRIM(FACS_SUBJECT__c)),&quot; &quot;,&quot;&quot;)==&apos;FOXBROADCASTINGCOMPANY&apos;)</errorConditionFormula>
    <errorMessage>Subject cannot be Fox Broadcasting Company.Please change subject.</errorMessage>
</ValidationRule>