force-app/main/default/objects/FACS_MAIN__c/validationRules/NoReciepints.validationRule-meta.xml
<ValidationRule>
    <fullName>NoReciepints</fullName>
    <active>true</active>
    <description>No DLs and no emails when status Pending and status changed</description>
    <errorConditionFormula>AND(AND(ISPICKVAL(PRIORVALUE(FACS_STATUS__c), &quot;Pending&quot;)),  ISPICKVAL( FACS_STATUS__c , &quot;Sent&quot;) ,ISBLANK( FACS_ORG_Emails__c ), ISBLANK( FACS_DistLists__c )  )</errorConditionFormula>
    <errorMessage>You cannot send email without reciepients.Sent status requered email list</errorMessage>
</ValidationRule>