force-app/main/default/objects/FACS_MAIN__c/validationRules/SendGrid.validationRule-meta.xml
<ValidationRule>
    <fullName>SendGrid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( FACS_STATUS__c, &quot;Confirmed&quot;), FACS_SendGrid_confirmation__c==&quot;&quot; )</errorConditionFormula>
    <errorMessage>Yuo cannot change Sent status without sending emails.Please click on FACS Send Email.</errorMessage>
</ValidationRule>