force-app/main/default/objects/FACS_MAIN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FACS_SUBJECT__c</columns>
    <columns>FACS_File_Name__c</columns>
    <columns>FACS_STATUS__c</columns>
    <columns>FACS_Email_type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FACS_ORG_Emails__c</columns>
    <columns>FACS_Affiliate_File__c</columns>
    <columns>FACS_Email_DLs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>